tests/verbatim_scanner/errors/invalid_content_indent.txxt
Expected: []
title:
  wrong indent level, not enough
()


Expected: []
title:
        wrong indent level, too much enough
()